@@ -7,9 +7,17 @@
 // will change shortly.                                  //
 //-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-//
 
-// Right now it is a skeleton.  Not sure what I want to do yet!
-
+// My goodies
 #include "Dim1.h"
+
+// Root shiz
+#include "TFile.h"
+#include "TString.h"
+#include "TProfile.h"
+#include "TGraph.h"
+
+// Std
+#include <vector>
 
 class Analysis
 {
@@ -19,7 +27,18 @@ class Analysis
   // Constructor/Destructor
   Analysis();
   virtual ~Analysis();
+
+  // Look at the profile averaged over many G4
+  // showers in order to determine the E field
+  void Average1DResult();
+
+  // Convert the TProfile for some results into
+  // a simple vector<double>
+  std::vector<double> convert(TProfile* prof);
+
+ private:
   
+  Dim1* m_dim1; // 1*D ana object
 
 };
 
